[project]
name = "py-gitea"
version = "0.2.10"
authors = [{name = "Vincent Langenfeld", email= "langenfv@informatik.uni-freiburg.de"}]
description = "A python wrapper for the Gitea API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "immutabledict",
]
keywords = ["Gitea", "api", "wrapper"]
license = "MIT"

[tool.black]
line-length = 120



